Changed MSA image selection, fixed header alignment, added pagination for  cluster tables

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,7 +9,7 @@ body {
   .header {
     overflow: hidden;
     background-color: #f1f1f1;
-    padding: 20px 10%;
+    padding: 20px 4%;
   }
 
   .header a {
